2010-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: For stdio operation, prep ‘finishedit’ properly.

	Regressions introduced 2010-04-17 and 2010-05-31, in
	"Overhaul read-only file handling" and "Mark verbatim
	region; reduce transitional tell/seek", respectively.
	* rcsedit.c (swapeditfiles): Set the fro ‘.end’ as well.
	(finishedit_slow): Prior to spewing, set start point.

2010-10-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: local_tm

	Omission from 2010-06-12, "Use ‘gmtime_r’, ‘localtime_r’".
	* maketime.c (local_tm): New func.
	(time2tm): Use ‘local_tm’.
	* maketime.h (struct maketimestuff): Add member ‘tzset_called_p’.
	(local_tm): New func decl.
	* rcstime.c (date2str): Use ‘local_tm’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Cast less.

	* b-fro.c (fro_spew_partial): Remove unnecessary cast.
	* ci.c (BHDELTA): Delete macro.
	(addbranch): Use local var for temp ‘struct delta *’.
	* rcs.c (dolocks): Use local var for temp ‘const char *’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘NULL’ more.

	* b-fro.c (fro_open): In the case of ‘RM_MEM’
	on a zero-sized file, use ‘NULL’ for ‘f->base’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: nfs_NOENT_p

	* rcsedit.c (nfs_NOENT_p): New static func.
	(un_link, chnamemod): Use ‘nfs_NOENT_p’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option: --enable-suid[=setreuid]

	* b-excwho.c (set_uid_to): Use ‘HAVE_SETREUID’.
	* base.h (has_setreuid): Delete #define.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Don't bother with ‘psignal’.

	* b-isr.c (complain_signal) [HAVE_PSIGNAL]:
	Delete code and surrounding preprocessor conditional.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: change_mode

	* b-fb.c (change_mode): New func.
	* b-fb.h (change_mode): New func decl.
	* ci.c (fixwork): Use ‘change_mode’.
	* rcsedit.c (chnamemod): Likewise.
